Add missing scrollbars (#958)

--- a/app/src/main/res/layout/fragment_app_list.xml
+++ b/app/src/main/res/layout/fragment_app_list.xml
@@ -78,7 +78,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
-                android:scrollbars="none"
+                android:fadeScrollbars="true"
+                android:scrollbarStyle="insideOverlay"
+                android:scrollbars="vertical"
                 app:borderTopVisibility="whenTop"
                 app:borderTopDrawable="@null"
                 app:borderBottomVisibility="never"
