--- a/app/src/main/res/layout/fragment_repo.xml
+++ b/app/src/main/res/layout/fragment_repo.xml
@@ -61,7 +61,9 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingTop="?actionBarSize"
-        android:scrollbars="none"
+        android:fadeScrollbars="true"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbars="vertical"
         app:borderTopVisibility="whenTop"
         app:borderTopDrawable="@null"
         app:borderBottomVisibility="never"
