--- a/app/src/main/res/layout/dialog_recyclerview.xml
+++ b/app/src/main/res/layout/dialog_recyclerview.xml
@@ -20,5 +20,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:minHeight="?attr/listPreferredItemHeight" />
+    android:minHeight="?attr/listPreferredItemHeight"
+    android:fadeScrollbars="true"
+    android:scrollbarStyle="insideOverlay"
+    android:scrollbars="vertical" />
 
