--- a/app/src/main/res/layout/item_repo_recyclerview.xml
+++ b/app/src/main/res/layout/item_repo_recyclerview.xml
@@ -24,7 +24,9 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:paddingTop="104dp"
-    android:scrollbars="none"
+    android:fadeScrollbars="true"
+    android:scrollbarStyle="insideOverlay"
+    android:scrollbars="vertical"
     app:borderTopVisibility="whenTop"
     app:borderTopDrawable="@null"
     app:borderBottomVisibility="never"
