[app] Add update available to repo list (#1011)
* [app] Fix possible crashes

* [app] Add update available to repo list

* [app] Fix scrollbar

--- a/app/src/main/res/layout/fragment_logs.xml
+++ b/app/src/main/res/layout/fragment_logs.xml
@@ -82,7 +82,7 @@
             android:clipToPadding="false"
             android:fadeScrollbars="true"
             android:paddingTop="104dp"
-            android:scrollbarStyle="outsideOverlay"
+            android:scrollbarStyle="insideOverlay"
             android:scrollbars="vertical"
             app:borderTopVisibility="whenTop"
             app:borderTopDrawable="@null"
